--- a/package.json
+++ b/package.json
@@ -6,35 +6,38 @@
   "private": true,
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "@nestjs/common": "^9.0.0",
+    "@nestjs-modules/mailer": "^1.8.1",
+    "@nestjs/common": "^9.3.9",
     "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/core": "^9.3.9",
+    "@nestjs/mapped-types": "^1.2.2",
+    "@nestjs/platform-express": "^9.3.9",
     "@nestjs/platform-socket.io": "^9.3.9",
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.3.9",
-    "axios": "^1.0.0",
+    "@types/nodemailer": "^6.4.7",
+    "axios": "^1.3.4",
     "next": "13.1.1",
+    "nodemailer": "^6.9.1",
     "pg": "^8.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.0.0",
-    "tslib": "^2.3.0",
+    "rxjs": "^7.8.0",
+    "tslib": "^2.5.0",
     "typeorm": "^0.3.12"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.14.5",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@babel/preset-react": "^7.18.6",
+    "@nestjs/schematics": "^9.0.4",
+    "@nestjs/testing": "^9.3.9",
     "@nrwl/cypress": "15.7.0",
     "@nrwl/eslint-plugin-nx": "15.7.0",
     "@nrwl/jest": "15.7.0",
     "@nrwl/js": "15.7.0",
     "@nrwl/linter": "15.7.0",
     "@nrwl/nest": "15.7.0",
-    "@nrwl/next": "^15.7.0",
+    "@nrwl/next": "^15.7.2",
     "@nrwl/node": "15.7.0",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "15.7.0",
@@ -46,14 +49,14 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
     "babel-jest": "28.1.1",
-    "cypress": "^12.2.0",
+    "cypress": "^12.6.0",
     "eslint": "~8.15.0",
     "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.11",
@@ -61,11 +64,11 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "nx": "15.7.0",
-    "prettier": "^2.6.2",
+    "prettier": "^2.8.4",
     "react-test-renderer": "18.2.0",
     "sass": "1.55.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "~4.8.4"
   }
 }
