--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
     "@nestjs/common": "^9.3.9",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.3.9",
+    "@nestjs/jwt": "^10.0.2",
     "@nestjs/mapped-types": "^1.2.2",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.3.9",
     "@nestjs/platform-socket.io": "^9.3.9",
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.3.9",
     "@types/nodemailer": "^6.4.7",
+    "argon2": "^0.30.3",
     "axios": "^1.3.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "next": "13.1.1",
     "nodemailer": "^6.9.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -44,9 +51,11 @@
     "@nrwl/webpack": "15.7.0",
     "@nrwl/workspace": "15.7.0",
     "@testing-library/react": "13.4.0",
+    "@types/express": "^4.17.17",
     "@types/hapi__joi": "^17.1.9",
     "@types/jest": "28.1.1",
     "@types/node": "18.11.9",
+    "@types/passport-jwt": "^3.0.8",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
