--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.3.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "next": "13.1.1",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
@@ -51,6 +52,7 @@
     "@nrwl/webpack": "15.7.0",
     "@nrwl/workspace": "15.7.0",
     "@testing-library/react": "13.4.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/hapi__joi": "^17.1.9",
     "@types/jest": "28.1.1",
